06-local-cloud-security-architecture-lab/kubernetes/20-secure-workload.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-api-secure
  namespace: workload-dev
  labels:
    app: demo-api-secure
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-api-secure
  template:
    metadata:
      labels:
        app: demo-api-secure
    spec:
      automountServiceAccountToken: false
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: nginx
          image: nginx:1.27-alpine
          ports:
            - name: http
              containerPort: 80
          securityContext:
            runAsNonRoot: true
            runAsUser: 101
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - name: nginx-cache
              mountPath: /var/cache/nginx
            - name: nginx-run
              mountPath: /var/run
            - name: nginx-tmp
              mountPath: /tmp
      volumes:
        - name: nginx-cache
          emptyDir: {}
        - name: nginx-run
          emptyDir: {}
        - name: nginx-tmp
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: demo-api-secure
  namespace: workload-dev
spec:
  selector:
    app: demo-api-secure
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
